--- a/index.html
+++ b/index.html
@@ -4,13 +4,16 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Projetos 360º</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body>
-    <main class="container">
-        <h1>Visualizador 360º</h1>
-        <div id="project-list" class="project-list"></div>
-    </main>
+<body >
+    <div class="container">
+        <h1 style="text-align:left; margin-bottom:2.5rem;">360º Viewer</h1>
+        <div class="project-list" id="project-list">
+            <!-- Projetos inseridos via JS -->
+        </div>
+    </div>
     <script src="js/main.js"></script>
 </body>
 </html>
