--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"/>
     <link rel="stylesheet" href="css/style.css" />
 </head>
-<body >
+<body>
     <div class="container">
-        <h1 style="text-align:left; margin-bottom:2.5rem;">360º Viewer</h1>
+       
         <div class="project-list" id="project-list">
-            <!-- Projetos inseridos via JS -->
+            <!-- Os cards dos projetos serão inseridos aqui via JS -->
         </div>
     </div>
     <script src="js/main.js"></script>
