--- a/viewer.html
+++ b/viewer.html
@@ -22,6 +22,11 @@
         <div id="room-switcher"></div>
     </div>
     <div id="share-feedback">Link copiado!</div>
+    <button id="room-switcher-toggle" aria-label="Mostrar salas">
+      <span></span>
+      <span></span>
+      <span></span>
+    </button>
     <script src="js/viewer.js"></script>
 </body>
 </html>
